# CPPTemplate

./: .gitignore  CMakeLists.txt  Makefile  start.sh
src/: main.cpp
